Add create, createMany, and get reservation functions
